Fix: job search page job detail ui distortion

--- a/components/JobDetail/JobDetail.module.scss
+++ b/components/JobDetail/JobDetail.module.scss
@@ -117,6 +117,11 @@
     }
   }
 
+  &ImageInfoWrapper{
+    display:flex;
+    flex-direction: row;
+  }
+
   &Image {
     width: 78px;
     height: 78px;
